@@ -7,8 +7,7 @@ use Apache::Test;
 use Apache::TestRequest;
 use Apache::TestUtil;
 
-plan tests => 1, need need_module('mod_cgi.c'),
-                 need_module('mod_cgid.c'),
+plan tests => 1, need need_cgi,
                  need_module('mod_env.c');
 
 my $url = '/cgi-bin/next_available_port.pl';
